# stove-watcher

./: .gitignore  README.md  classify-image.py  environment.yml  markboxes.py
data/: bbtagger.py  boundingboxfile.py  find-knobs.py  find-knobs.sh  qa_bounding_boxes.py  rename.py  resize.py
data-from-ei/: show_sample_labels.ipynb
data/out-bbtagger/boresight1/: rects.pickle
data/out-bbtagger/general/: rects.pickle
data/tagged-knobs/: README.txt
knobhead/: Makefile  main.cpp
knobhead/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
prototype/: markboxes.py
prototype/knobhead/: README.txt  main.cpp  read_jpg.cpp  read_jpg.h
prototype/readjpg/: read_jpg.cpp
readjpg/: CMakeLists.txt  read_jpg.cpp
src/: appconfig.py  augment-tagged-knobs.sh  bbtagger.py  boundingboxfile.py  config_store.py  dir_mon.py  extract-knobs-bbtagger.sh  extract-knobs-ei.sh  extract-knobs.py  find-knobs.py  find-knobs.sh  helplib.py  knob_classifier.py  knob_locator.py  knobextractor.py  knobid.py  knobtagger-bbtagger.sh  knobtagger-ei.sh  knobtagger.py  knobtagger.sh  make-all-bbox-labels.sh  mqtt_publisher.py  mqtt_topics.py  nn_models.py  prefix-knobtagger-files.sh  prefix_image_files.py  rename-all.sh  rename.py  resize-all.sh  resize.py  stove_classifier.py  stove_state.py  stove_watcher.py
tests/: .#test_nn.py  test_bbox_file.py  test_dir_mon.py  test_knob_classifier.py  test_knob_classify.py  test_knob_locator.py  test_mqtt_mock.py  test_nn.py  test_smoke.py  test_stove_classifier.py  test_stove_state.py  test_stove_watcher.py
(+10 files in other folders)
